<resources>
    <string name="app_name" translatable="false">SecondBrain</string>
    <string name="name">name</string>
    <string name="new_task">New Task</string>
    <string name="description">description</string>
    <string name="date">date</string>
    <string name="save">save</string>
    <string name="edit_task">Edit Task</string>
    <string name="settings">Settings</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="overview">Overview</string>
    <string name="export_database">export database</string>
    <string name="import_database">import database</string>
    <string name="reset_app">reset app</string>
    <string name="completed_tasks">completed tasks</string>
    <string name="completed_at">"completed at: "</string>
    <string name="database_exported_to">"Database exported to "</string>
    <string name="error_while_exporting_the_database">Error while exporting the database</string>
    <string name="database_imported_from">"Database imported from "</string>
    <string name="error_while_importing_the_database">Error while importing the database</string>
    <string name="do_you_really_want_to_reset_the_app">Do you really want to reset the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="press_and_hold_for_2_seconds_to_delete">"Press and hold for 2 seconds to delete: "</string>
    <string name="task_deleted">"Task deleted: "</string>
    <string name="reminder">reminder</string>
    <string name="name_or_date_is_empty">Name is empty</string>
    <string name="task_from">"Task from "</string>
    <string name="no_reminder_set">no reminder set</string>
    <string name="reminder_deleted">reminder deleted</string>
    <string name="upcoming">Upcoming</string>
</resources>